; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8712/extr_rtl871x_mp.c_GetPhyRxPktCounts.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8712/extr_rtl871x_mp.c_GetPhyRxPktCounts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._adapter = type { i32 }

@RXERR_RPT = common dso_local global i32 0, align 4
@RPTMaxCount = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct._adapter*, i32)* @GetPhyRxPktCounts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetPhyRxPktCounts(%struct._adapter* %0, i32 %1) #0 {
  %3 = alloca %struct._adapter*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct._adapter* %0, %struct._adapter** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = shl i32 %7, 28
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = and i32 %9, -268435456
  %11 = load i32, i32* %5, align 4
  %12 = or i32 %11, %10
  store i32 %12, i32* %5, align 4
  %13 = load %struct._adapter*, %struct._adapter** %3, align 8
  %14 = load i32, i32* @RXERR_RPT, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @r8712_write32(%struct._adapter* %13, i32 %14, i32 %15)
  %17 = load %struct._adapter*, %struct._adapter** %3, align 8
  %18 = load i32, i32* @RXERR_RPT, align 4
  %19 = call i32 @r8712_read32(%struct._adapter* %17, i32 %18)
  %20 = load i32, i32* @RPTMaxCount, align 4
  %21 = and i32 %19, %20
  ret i32 %21
}

declare dso_local i32 @r8712_write32(%struct._adapter*, i32, i32) #1

declare dso_local i32 @r8712_read32(%struct._adapter*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
